# itoktok-fastapi-backend

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  SRS.md  api.env  certbot.md  certbot.sh  db.my.env  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  frontend-mobile-deploy.sh  nginx.conf  nginx.dev.conf  schedule
backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
certs/: gillilab.io.crt  gillilab.io.csr  gillilab.io.key  gillilab.io.pem
conf/: db.pg.env  nginx.conf
data/: sqlite3.db
database/: alembic_version.sql  itoktok-20260330-schema.sql  itoktok-20260330.sql  itoktok_db-20260122.sql  itoktok_db_new_schedule_schema.sql  itoktok_db_schema.sql  itoktok_db_schema_20250202.sql  schedulelist
docs/: 01.prd.md  02.architecture.md  04.api-spec.md  05.tech-stack.md  07.project-status.md  09.refactor-plan.md  11.db-management-guide.md  12.frontend-functional-spec.md  13.e2e-test-plan.md  14.e2e-test-result-2026-04-02.md  AI_TODO.md  ANALYSIS_REPORT.md  ANALYSIS_TEMPLATE.md  SRS.md  db-schema.md  feature-map.md  improvement-roadmap.md  mobile-api.md  (+1 more)
std-api/: .dockerignore  .python-version  Dockerfile  models.ipynb  pyproject.toml
std-api/app/: main.py
std-api/app/api/: __init__.py  announcement.py  auth.py  books.py  center.py  client.py  customer.py  files.py  graphql.py  heroes.py  notice.py  program.py  schedule.py  signup.py  teacher.py  teams.py  tutorials.py  users.py  voucher.py
std-api/app/core/: __init__.py  app.py  mydb.py
std-api/app/crud/: center.py  client.py  customer.py  inquiry.py  notice.py  program.py  record.py  schedule.py  teacher.py  user.py  voucher.py
std-api/app/models/: __init__.py  announcement.py  board.py  book.py  client.py  customer.py  hero.py  inquiry.py  joined.py  notice.py  program.py  programe.py  record.py  schedule.py  teacher.py  team.py  user.py  voucher.py
std-api/app/schemas/: __init__.py  announcement.py  client.py  customer.py  inquiry.py  notice.py  program.py  record.py  schedule.py  teacher.py  user.py  voucher.py
std-api/http-json/: create-teacher.json
std-api/tests/: team_test.py
(+242 files in other folders)
