[tool.poetry]
name = "std-api"
version = "0.0.1"
description = ""
authors = ["Monkey.d.rupi <minsuhya@gmail.com>"]
readme = "README.md"
packages = [{ include = "std-api" }]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
pydantic = { extras = ["email"], version = "^2.7.3" }
fastapi = { extras = ["full"], version = "^0.111.0" }
sqlmodel = "^0.0.19"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.3"
pymongo = "^4.2.0"
python-multipart = "^0.0.7"
uvicorn = "^0.18.3"
pymysql = "^1.1.0"
# strawberry-graphql = { extras = ["debug-server"], version = "^0.199.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
# Pin bcrypt until passlib supports the latest
bcrypt = "4.0.1"
fastapi-pagination = "^0.12.26"


[tool.poetry.group.tests.dependencies]
httpx = "^0.23.0"
requests = "^2.28.1"
aiohttp = "^3.8.3"


[tool.poetry.group.docs.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
